# api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __main__.py  env_validator.py  logger.py  main.py
router/: search.py
service/: search_engine.py  translator.py
