[tool.poetry]
name = "payload-api"
version = "0.1.0"
description = ""
authors = ["Yuchan Han <serltretu24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
aiohttp = "^3.11.13"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"
emoji = "^2.14.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
